# VulkanMod-DLSS

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md
native/: CMakeLists.txt
native/include/: mcdlss.h
native/src/: jni_bridge.cpp  sl_dlss_sr.cpp  sl_manager.cpp
tools/: build_native.ps1  env.ps1  run_dev.ps1
vulkanmod/: gradle.properties
vulkanmod/src/main/java/net/kaiten/: DlssSuperResolution.java  KaitenFSR.java  KaitenRenderState.java
vulkanmod/src/main/java/net/kaiten/config/: KaitenConfig.java  KaitenOptions.java
vulkanmod/src/main/java/net/vulkanmod/: Initializer.java
vulkanmod/src/main/java/net/vulkanmod/config/option/: Options.java
vulkanmod/src/main/java/net/vulkanmod/dlss/: DlssComputeValidator.java  DlssFrameState.java  DlssGpuTest.java  DlssSelfTest.java  DlssSuperResolution.java  MotionVectorMath.java  NativeBridge.java
vulkanmod/src/main/java/net/vulkanmod/vulkan/: Renderer.java  VRenderSystem.java  Vulkan.java
vulkanmod/src/main/java/net/vulkanmod/vulkan/device/: DeviceManager.java
vulkanmod/src/main/java/net/vulkanmod/vulkan/framebuffer/: Framebuffer.java
vulkanmod/src/main/java/net/vulkanmod/vulkan/pass/: DefaultMainPass.java
vulkanmod/src/main/resources/assets/vulkanmod/shaders/dlss/: motion_vectors.fsh  motion_vectors.vsh  motion_vectors_cs.comp
vulkanmod/src/main/resources/assets/vulkanmod/shaders/kaiten/: fsr_easu.comp  fsr_rcas.comp
